--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,10 +1,14 @@
 @import '_normalize';
 @import '_variables';
+
 @import url('https://fonts.googleapis.com/css?family=Poppins:300,400,500,600&display=swap&subset=latin-ext');
+
+@import './hero/hero.scss';
 
 html {
 	box-sizing: border-box;
 	font-family: 'Poppins', sans-serif;
+	font-size: 16px;
 }
 
 *,
@@ -17,11 +21,6 @@ body {
 	background: white;
 	color: $big-stone;
 	border: 16px solid $big-stone;
-}
-
-.hero__img {
-	border-radius: 50%;
-	border: 6px solid $ghost;
-	padding: 3px;
-	width: 120px;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
 }
