Add styles to my skills section

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,5 +1,9 @@
+$athens-gray: #e5e8ec;
 $azure-radiance: #0593fb;
 $big-stone: #171f3f;
+$malachite: #06c847;
+$mariner: #2251cc;
+$royal-purple: #653cad;
 $shuttle-gray: #52606d;
 $ghost: #cbd2d9;
 $white: #ffffff;
