--- a/src/scss/hero/hero.scss
+++ b/src/scss/hero/hero.scss
@@ -1,7 +1,7 @@
 .hero {
 	margin: 0 auto;
 	max-width: 1184px;
-	padding: 112px 0 200px;
+	padding: 7rem 0 5rem;
 
 	&__img {
 		border-radius: 50%;
