--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -4,11 +4,13 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins:300,400,500,600&display=swap&subset=latin-ext');
 
 @import './hero/hero.scss';
+@import './skills/skills.scss';
 
 html {
 	box-sizing: border-box;
 	font-family: 'Poppins', sans-serif;
 	font-size: 16px;
+	scroll-behavior: smooth;
 }
 
 *,
