Center hero section

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -21,6 +21,7 @@ html {
 
 body {
 	background: white;
+	padding: 1rem;
 	color: $big-stone;
 	border: 16px solid $big-stone;
 	-webkit-font-smoothing: antialiased;
