--- a/src/scss/hero/hero.scss
+++ b/src/scss/hero/hero.scss
@@ -1,7 +1,9 @@
 .hero {
 	margin: 0 auto;
-	max-width: 1184px;
+	max-width: 681px;
 	padding: 7rem 0 5rem;
+	display: grid;
+	grid-template-columns: 1fr;
 
 	&__img {
 		border-radius: 50%;
@@ -35,6 +37,8 @@
 		line-height: 2.25rem;
 		padding-bottom: 0.8rem;
 		text-decoration: none;
+		display: block;
+		max-width: 17.5rem;
 	}
 
 	&__title {
