--- a/src/scss/skills/skills.scss
+++ b/src/scss/skills/skills.scss
@@ -6,7 +6,7 @@
 
 .skills {
 	margin: 0 auto;
-	max-width: 1184px;
+	max-width: $max-width;
 	&__title {
 		font-weight: 600;
 		font-size: 2.25rem;
