Add style for contact

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -6,6 +6,7 @@
 @import './hero/hero.scss';
 @import './skills/skills.scss';
 @import './projects/projects.scss';
+@import './contact/contact.scss';
 
 html {
 	box-sizing: border-box;
