--- a/src/scss/contact/contact.scss
+++ b/src/scss/contact/contact.scss
@@ -2,6 +2,8 @@
 	background: $big-stone;
 	color: #fff;
 	padding-bottom: calc(8rem - 8px);
+	padding-left: 1rem;
+	padding-right: 1rem;
 
 	&__container {
 		max-width: $max-width;
@@ -31,7 +33,6 @@
 		font-size: 1.25rem;
 		line-height: 2.25rem;
 		max-width: 600px;
-		min-width: 400px;
 		margin-bottom: 1.5rem;
 	}
 
