--- a/src/scss/hero/hero.scss
+++ b/src/scss/hero/hero.scss
@@ -1,7 +1,7 @@
 .hero {
 	margin: 0 auto;
 	max-width: 681px;
-	padding: 7rem 0 5rem;
+	padding: 7rem 1rem 5rem;
 	display: grid;
 	grid-template-columns: 1fr;
 
