--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -13,6 +13,9 @@ html {
 	font-family: 'Poppins', sans-serif;
 	font-size: 16px;
 	scroll-behavior: smooth;
+	@media (max-width: $mobile) {
+		font-size: 11px;
+	}
 }
 
 *,
@@ -27,4 +30,7 @@ body {
 	border: 16px solid $big-stone;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
+	@media (max-width: $mobile) {
+		border: none;
+	}
 }
